--- a/styles/restaurant.scss
+++ b/styles/restaurant.scss
@@ -4,3 +4,14 @@
   justify-content: flex-end;
   margin-left: auto;
 }
+
+.cart-icon-container {
+  position: absolute;
+  right: 0;
+}
+
+.price-text {
+  position: absolute;
+  right: 0.5em;
+  bottom: 0.5em;
+}
